css reset, added our work and footer components to home

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,3 +14,11 @@
   color: white;
   height: 90vh;
 }
+.homepage .hero button {
+  border: none;
+  background-color: green;
+  height: 2rem;
+  width: auto;
+  border-radius: 10%;
+  color: whitesmoke;
+}
