--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -12,7 +12,13 @@
     align-items: center;
     color: white;
     height: 90vh;
-    h1 {
+    button {
+      border: none;
+      background-color: green;
+      height: 2rem;
+      width: auto;
+      border-radius: 10%;
+      color: whitesmoke;
     }
   }
 }
