--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,3 +1,16 @@
-.footer {
-  height: 10vh;
+footer {
+  background-color: #33383e;
+  position: absolute;
+  width: 100vw;
+}
+footer ul {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 7vh;
+}
+footer ul li {
+  list-style: none;
+  color: whitesmoke;
 }
