--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,3 +1,17 @@
-.footer {
-  height: 10vh;
+footer {
+  background-color: #33383e;
+  position: absolute;
+  width: 100vw;
+  ul {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 7vh;
+
+    li {
+      list-style: none;
+      color: whitesmoke;
+    }
+  }
 }
