--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,15 +1,15 @@
 nav {
   position: absolute;
-  background-color: whitesmoke;
+  background-color: #33383e;
   width: 100vw;
-  height: 10vh;
   margin: 0;
 }
 nav ul {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   text-decoration: none;
+  height: 5vh;
 }
 nav ul li {
   margin: 0 2rem;
@@ -17,5 +17,5 @@ nav ul li {
 }
 nav ul li .link {
   text-decoration: none;
-  color: black;
+  color: whitesmoke;
 }
