--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,21 +1,21 @@
 nav {
   position: absolute;
-  background-color: whitesmoke;
+  background-color: #33383e;
   width: 100vw;
-  height: 10vh;
   margin: 0;
 
   ul {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     text-decoration: none;
+    height: 5vh;
     li {
       margin: 0 2rem;
       list-style: none;
       .link {
         text-decoration: none;
-        color: black;
+        color: whitesmoke;
       }
     }
   }
