created links on footer

--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -11,7 +11,11 @@ footer {
 
     li {
       list-style: none;
-      color: whitesmoke;
+      .link {
+        text-decoration: none;
+
+        color: whitesmoke;
+      }
     }
   }
 }
