--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -18,4 +18,5 @@ nav ul li {
 nav ul li .link {
   text-decoration: none;
   color: whitesmoke;
+  font-family: Montserrat-alternates, sans-serif;
 }
