--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -16,6 +16,7 @@ nav {
       .link {
         text-decoration: none;
         color: whitesmoke;
+        font-family: Montserrat-alternates, sans-serif;
       }
     }
   }
