--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -13,7 +13,7 @@ footer {
       list-style: none;
       .link {
         text-decoration: none;
-
+        font-family: Montserrat-alternates, sans-serif;
         color: whitesmoke;
       }
     }
