styled our work with stock images

--- a/src/styles/our-work.css
+++ b/src/styles/our-work.css
@@ -1,5 +1,41 @@
 .work {
-  border: 1px solid black;
-  background-color: white;
-  height: 100vh;
+  display: flex;
+  height: 175vh;
+  align-items: center;
+  flex-flow: column wrap;
+}
+.work .title {
+  margin-top: 7rem;
+  font-family: Asap, sans-serif;
+  border-bottom: 1px solid black;
+  padding-bottom: 1rem;
+}
+.work figure {
+  color: black;
+  margin-top: 1rem;
+  padding-bottom: 1rem;
+  max-width: 90%;
+}
+.work figure blockquote {
+  margin: 0;
+}
+.work figure blockquote p {
+  padding: 15px;
+  background: #eee;
+  border-radius: 5px;
+  font-family: Montserrat-alternates, sans-serif;
+}
+.work figure blockquote p::before {
+  content: '\201C';
+}
+.work figure blockquote p::after {
+  content: '\201D';
+}
+.work .images picture {
+  display: flex;
+  justify-content: center;
+}
+.work .images picture img {
+  margin-top: 1rem;
+  max-width: 90%;
 }
