--- a/src/styles/our-work.less
+++ b/src/styles/our-work.less
@@ -1,5 +1,47 @@
 .work {
-  border: 1px solid black;
-  background-color: white;
-  height: 100vh;
+  display: flex;
+  height: 175vh;
+  align-items: center;
+  flex-flow: column wrap;
+  .title {
+    margin-top: 7rem;
+    font-family: Asap, sans-serif;
+    border-bottom: 1px solid black;
+    padding-bottom: 1rem;
+  }
+  figure {
+    color: black;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+
+    max-width: 90%;
+    blockquote {
+      margin: 0;
+    }
+
+    blockquote p {
+      padding: 15px;
+      background: #eee;
+      border-radius: 5px;
+      font-family: Montserrat-alternates, sans-serif;
+    }
+
+    blockquote p::before {
+      content: '\201C';
+    }
+
+    blockquote p::after {
+      content: '\201D';
+    }
+  }
+  .images {
+    picture {
+      display: flex;
+      justify-content: center;
+      img {
+        margin-top: 1rem;
+        max-width: 90%;
+      }
+    }
+  }
 }
