--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,18 +2,14 @@ footer {
   background-color: #33383e;
   position: absolute;
   width: 100vw;
-}
-footer ul {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
-  height: 7vh;
+  height: 8vh;
 }
-footer ul li {
+footer .link {
   list-style: none;
-}
-footer ul li .link {
   text-decoration: none;
   font-family: Montserrat-alternates, sans-serif;
   color: whitesmoke;
