--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,21 +1,12 @@
 nav {
-  position: absolute;
   background-color: #33383e;
-  width: 100vw;
-  margin: 0;
-}
-nav ul {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  text-decoration: none;
-  height: 5vh;
+  height: 3rem;
 }
-nav ul li {
-  margin: 0 2rem;
+nav .link {
   list-style: none;
-}
-nav ul li .link {
   text-decoration: none;
   color: whitesmoke;
   font-family: Montserrat-alternates, sans-serif;
