--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,13 +1,20 @@
 nav {
   background-color: #33383e;
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+
   height: 3rem;
   .link {
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
     list-style: none;
     text-decoration: none;
     color: whitesmoke;
     font-family: Montserrat-alternates, sans-serif;
+  }
+  .icon {
+    display: flex;
+    justify-content: flex-end;
+    color: whitesmoke;
   }
 }
