--- a/src/styles/navbar.less
+++ b/src/styles/navbar.less
@@ -1,6 +1,7 @@
 nav {
   background-color: #33383e;
   display: flex;
+  justify-content: space-between;
 
   height: 3rem;
   .link {
@@ -14,7 +15,7 @@ nav {
   }
   .icon {
     display: flex;
-    justify-content: flex-end;
+
     color: whitesmoke;
   }
 }
