--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-flow: column wrap;
-  background-image: url('../images/houston.jpg');
+  background-image: url('../images/houston.webp');
   height: 87vh;
   width: auto;
   background-repeat: no-repeat;
