--- a/src/styles/our-work.less
+++ b/src/styles/our-work.less
@@ -1,6 +1,6 @@
 .work {
   display: flex;
-  height: 175vh;
+  height: 200vh;
   align-items: center;
   flex-flow: column wrap;
   .title {
@@ -38,9 +38,23 @@
     picture {
       display: flex;
       justify-content: center;
+      flex-flow: column;
+      align-items: center;
       img {
         margin-top: 1rem;
         max-width: 90%;
+        padding-bottom: 0.5rem;
+        border-bottom: 1px solid black;
+      }
+      .content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row wrap;
+        margin: 1rem 0 0 0;
+        h4 {
+          margin-left: 1rem;
+        }
       }
     }
   }
