redesigned buttons on joincea

--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -28,6 +28,7 @@
       font-weight: bold;
       font-size: 1rem;
       margin-top: 1rem;
+      font-family: Montserrat-alternates, sans-serif;
     }
   }
 }
