--- a/src/styles/partner.css
+++ b/src/styles/partner.css
@@ -48,9 +48,10 @@ picture img {
 }
 .buttons .btn {
   margin: 0 0.5rem;
-  border-radius: 20%;
+  border-radius: 10%;
   border: none;
   background-color: green;
   color: whitesmoke;
-  height: 2rem;
+  height: 5rem;
+  font-family: Montserrat-alternates, sans-serif;
 }
