--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -53,10 +53,11 @@ picture {
   margin-top: 1rem;
   .btn {
     margin: 0 0.5rem;
-    border-radius: 20%;
+    border-radius: 10%;
     border: none;
     background-color: green;
     color: whitesmoke;
-    height: 2rem;
+    height: 5rem;
+    font-family: Montserrat-alternates, sans-serif;
   }
 }
