removed footer from app.js due to the inability to grow the page dynamically, had to add height on every component

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,8 +14,10 @@
   font-size: 2rem;
   color: black;
 }
-.homepage .hero h4 {
+.homepage .hero p {
+  margin-top: 1rem;
   color: black;
+  line-height: 1rem;
 }
 .homepage .hero button {
   border: none;
