--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -14,8 +14,10 @@
       font-size: 2rem;
       color: black;
     }
-    h4 {
+    p {
+      margin-top: 1rem;
       color: black;
+      line-height: 1rem;
     }
 
     button {
