--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,10 +14,21 @@
   font-size: 2rem;
   color: black;
 }
+@media screen and (min-width: 415px) {
+  .homepage .hero h1 {
+    font-size: 5rem;
+  }
+}
 .homepage .hero p {
   margin-top: 1rem;
   color: black;
   line-height: 1rem;
+}
+@media screen and (min-width: 415px) {
+  .homepage .hero p {
+    font-size: 2rem;
+    line-height: 2rem;
+  }
 }
 .homepage .hero button {
   border: none;
@@ -30,4 +41,12 @@
   font-size: 1rem;
   margin-top: 1rem;
   font-family: Montserrat-alternates, sans-serif;
+}
+@media screen and (min-width: 415px) {
+  .homepage .hero button {
+    margin-bottom: 10rem;
+    width: 15rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
 }
