--- a/src/styles/partner.css
+++ b/src/styles/partner.css
@@ -39,6 +39,11 @@ picture img {
   max-width: 90%;
   border-radius: 10%;
 }
+@media screen and (min-width: 415px) {
+  picture img {
+    height: 650px;
+  }
+}
 .buttons {
   display: flex;
   flex-flow: row wrap;
@@ -54,4 +59,11 @@ picture img {
   color: whitesmoke;
   height: 5rem;
   font-family: Montserrat-alternates, sans-serif;
+}
+@media screen and (min-width: 415px) {
+  .buttons .btn {
+    height: 4rem;
+    width: 10rem;
+    cursor: pointer;
+  }
 }
