--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -42,6 +42,9 @@ picture {
     margin-top: 1rem;
     max-width: 90%;
     border-radius: 10%;
+    @media screen and (min-width: 415px) {
+      height: 650px;
+    }
   }
 }
 
@@ -59,5 +62,10 @@ picture {
     color: whitesmoke;
     height: 5rem;
     font-family: Montserrat-alternates, sans-serif;
+    @media screen and (min-width: 415px) {
+      height: 4rem;
+      width: 10rem;
+      cursor: pointer;
+    }
   }
 }
