--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -32,7 +32,7 @@
       background-color: green;
       height: 3rem;
       width: 10rem;
-      border-radius: 10%;
+      border-radius: 10px;
       color: whitesmoke;
       font-weight: bold;
       font-size: 1rem;
