--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -41,7 +41,7 @@ picture {
   img {
     margin-top: 1rem;
     max-width: 90%;
-    border-radius: 10%;
+    border-radius: 10px;
     @media screen and (min-width: 415px) {
       height: 650px;
     }
@@ -56,7 +56,7 @@ picture {
   margin-top: 1rem;
   .btn {
     margin: 0 0.5rem;
-    border-radius: 10%;
+    border-radius: 10px;
     border: none;
     background-color: green;
     color: whitesmoke;
