--- a/src/styles/partner.css
+++ b/src/styles/partner.css
@@ -30,6 +30,11 @@
 .lower {
   margin-bottom: 1rem;
 }
+@media screen and (min-width: 415px) {
+  .lower {
+    margin: 5rem 0;
+  }
+}
 picture {
   display: flex;
   justify-content: center;
@@ -41,7 +46,8 @@ picture img {
 }
 @media screen and (min-width: 415px) {
   picture img {
-    height: 650px;
+    height: 375px;
+    width: 500px;
   }
 }
 .buttons {
@@ -52,12 +58,12 @@ picture img {
   margin-top: 1rem;
 }
 .buttons .btn {
-  margin: 0 0.5rem;
+  margin: 0.5rem 0.5rem;
   border-radius: 10px;
   border: none;
   background-color: green;
   color: whitesmoke;
-  height: 5rem;
+  height: 3rem;
   font-family: Montserrat-alternates, sans-serif;
 }
 @media screen and (min-width: 415px) {
