--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -33,6 +33,9 @@
 }
 .lower {
   margin-bottom: 1rem;
+  @media screen and (min-width: 415px) {
+    margin: 5rem 0;
+  }
 }
 
 picture {
@@ -43,7 +46,8 @@ picture {
     max-width: 90%;
     border-radius: 10px;
     @media screen and (min-width: 415px) {
-      height: 650px;
+      height: 375px;
+      width: 500px;
     }
   }
 }
@@ -55,12 +59,12 @@ picture {
   align-items: flex-end;
   margin-top: 1rem;
   .btn {
-    margin: 0 0.5rem;
+    margin: 0.5rem 0.5rem;
     border-radius: 10px;
     border: none;
     background-color: green;
     color: whitesmoke;
-    height: 5rem;
+    height: 3rem;
     font-family: Montserrat-alternates, sans-serif;
     @media screen and (min-width: 415px) {
       height: 4rem;
