--- a/src/styles/home.less
+++ b/src/styles/home.less
@@ -9,6 +9,9 @@
   background-size: contain;
   height: 87vh;
   width: auto;
+  @media screen and (min-width: 415px) {
+    height: 100vh;
+  }
   .hero {
     display: flex;
     flex-flow: column;
