--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,16 +1,18 @@
-footer {
-  background-color: #33383e;
-  position: absolute;
-  width: 100vw;
+.bottom-nav {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
   height: 8vh;
+  background-color: #33383e;
 }
-footer .link {
+.bottom-nav footer .link {
   list-style: none;
   text-decoration: none;
   font-family: Montserrat-alternates, sans-serif;
   color: whitesmoke;
+  margin: 0 1rem;
+}
+.bottom-nav .icons {
+  display: none;
 }
