--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,17 +1,21 @@
-footer {
-  background-color: #33383e;
-  position: absolute;
-  width: 100vw;
+.bottom-nav {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-evenly;
   align-items: center;
   height: 8vh;
+  background-color: #33383e;
 
-  .link {
-    list-style: none;
-    text-decoration: none;
-    font-family: Montserrat-alternates, sans-serif;
-    color: whitesmoke;
+  footer {
+    .link {
+      list-style: none;
+      text-decoration: none;
+      font-family: Montserrat-alternates, sans-serif;
+      color: whitesmoke;
+      margin: 0 1rem;
+    }
+  }
+  .icons {
+    display: none;
   }
 }
