--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,6 +10,11 @@
   height: 87vh;
   width: auto;
 }
+@media screen and (min-width: 415px) {
+  .homepage {
+    height: 100vh;
+  }
+}
 .homepage .hero {
   display: flex;
   flex-flow: column;
