--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,25 +6,35 @@ nav {
 }
 @media screen and (min-width: 415px) {
   nav {
+    width: 70%;
     justify-content: space-evenly;
+    background-color: white;
+    margin-top: 1rem;
+  }
+}
+@media screen and (min-width: 415px) {
+  nav .logo {
+    background-color: black;
   }
 }
 nav .link {
-  display: none;
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
   list-style: none;
   text-decoration: none;
   color: whitesmoke;
   font-family: Montserrat-alternates, sans-serif;
+  margin-right: 1rem;
 }
 @media screen and (min-width: 415px) {
   nav .link {
     display: flex;
+    color: black;
   }
 }
 nav .icon {
-  display: flex;
+  display: none;
   color: whitesmoke;
 }
 @media screen and (min-width: 415px) {
