--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,13 +6,14 @@
   background-image: url('../images/houston-small.webp');
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: contain;
+  background-size: cover;
   height: 90vh;
   width: auto;
 }
 @media screen and (min-width: 415px) {
   .homepage {
     height: 100vh;
+    background-size: contain;
   }
 }
 .homepage .hero {
@@ -48,7 +49,10 @@
     color: black;
   }
 }
-.homepage .hero button {
+.homepage .hero .link {
+  margin-top: 10rem;
+}
+.homepage .hero .link button {
   border: none;
   background-color: green;
   height: 3rem;
@@ -57,12 +61,10 @@
   color: whitesmoke;
   font-weight: bold;
   font-size: 1rem;
-  margin-top: 1rem;
-  margin-top: 15rem;
   font-family: Montserrat-alternates, sans-serif;
 }
 @media screen and (min-width: 415px) {
-  .homepage .hero button {
+  .homepage .hero .link button {
     width: 15rem;
     font-size: 1.5rem;
     cursor: pointer;
