--- a/src/styles/partner.less
+++ b/src/styles/partner.less
@@ -1,75 +1,42 @@
-.quote {
+.partner {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-flow: column;
-  h1 {
-    margin-top: 1rem;
+  height: 100vh;
+
+  .title {
+    margin-top: 2rem;
   }
-  figure {
-    color: black;
-    margin-top: 1rem;
-
-    max-width: 90%;
-    blockquote {
-      margin: 0;
+  picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    img {
+      width: 95%;
     }
-
-    blockquote p {
-      padding: 15px;
-      background: #eee;
+  }
+  section {
+    .btn {
+      font-family: Asap, sans-serif;
+      border: none;
       border-radius: 5px;
-      font-family: Montserrat-alternates, sans-serif;
-    }
-
-    blockquote p::before {
-      content: '\201C';
-    }
-
-    blockquote p::after {
-      content: '\201D';
+      background-color: green;
+      color: whitesmoke;
+      height: 3rem;
+      margin: 0.5rem;
     }
   }
-}
-.lower {
-  margin-bottom: 1rem;
-  @media screen and (min-width: 415px) {
-    margin: 5rem 0;
-  }
-}
-
-picture {
-  display: flex;
-  justify-content: center;
-  img {
-    margin-top: 1rem;
-    max-width: 90%;
-    border-radius: 10px;
-    @media screen and (min-width: 415px) {
-      height: 375px;
-      width: 500px;
-    }
-  }
-}
-
-.buttons {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: flex-end;
-  margin-top: 1rem;
-  .btn {
-    margin: 0.5rem 0.5rem;
-    border-radius: 10px;
-    border: none;
-    background-color: green;
-    color: whitesmoke;
-    height: 3rem;
-    font-family: Montserrat-alternates, sans-serif;
-    @media screen and (min-width: 415px) {
-      height: 4rem;
-      width: 10rem;
-      cursor: pointer;
+  .quote {
+    margin: 0 1rem;
+    line-height: 1.3rem;
+    figure {
+      blockquote {
+        p {
+          font-family: Montserrat-alternates, sans-serif;
+        }
+      }
     }
   }
 }
