--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,18 +1,51 @@
-.bottom-nav {
+.footer {
   display: flex;
-  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column;
+  background-color: #212121;
+  color: whitesmoke;
+  padding: 1rem;
+  height: 100vh;
+}
+.footer h1 {
+  border-bottom: 1px solid whitesmoke;
+  margin-bottom: 1rem;
+}
+.footer h2 {
+  margin-top: 1rem;
+}
+.footer address {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
+.footer address a {
+  text-decoration: none;
+  color: whitesmoke;
+  cursor: pointer;
+}
+.footer .follow-us {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
+.footer .follow-us h1 {
+  margin-top: 1rem;
+}
+.footer .follow-us .social-icons {
+  display: flex;
+  justify-content: space-evenly;
+  flex-flow: row;
+  width: 100vw;
+}
+.copyright {
+  display: flex;
   justify-content: space-evenly;
   align-items: center;
-  height: 8vh;
-  background-color: #33383e;
-}
-.bottom-nav footer .link {
-  list-style: none;
-  text-decoration: none;
-  font-family: Montserrat-alternates, sans-serif;
+  background-color: #212121;
   color: whitesmoke;
-  margin: 0 1rem;
-}
-.bottom-nav .icons {
-  display: none;
+  padding-bottom: 2rem;
 }
