--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -1,21 +1,51 @@
-.bottom-nav {
+.footer {
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
-  height: 8vh;
-  background-color: #33383e;
-
-  footer {
-    .link {
-      list-style: none;
+  flex-flow: column;
+  background-color: #212121;
+  color: whitesmoke;
+  padding: 1rem;
+  height: 100vh;
+  h1 {
+    border-bottom: 1px solid whitesmoke;
+    margin-bottom: 1rem;
+  }
+  h2 {
+    margin-top: 1rem;
+  }
+  address {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    a {
       text-decoration: none;
-      font-family: Montserrat-alternates, sans-serif;
       color: whitesmoke;
-      margin: 0 1rem;
+      cursor: pointer;
     }
   }
-  .icons {
-    display: none;
+  .follow-us {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    h1 {
+      margin-top: 1rem;
+    }
+    .social-icons {
+      display: flex;
+      justify-content: space-evenly;
+      flex-flow: row;
+      width: 100vw;
+    }
   }
+}
+.copyright {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #212121;
+  color: whitesmoke;
+  padding-bottom: 2rem;
 }
