added links to homepage icons

--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -41,6 +41,9 @@
   flex-flow: row;
   width: 100vw;
 }
+.footer .follow-us .social-icons .icon {
+  color: whitesmoke;
+}
 .copyright {
   display: flex;
   justify-content: space-evenly;
