--- a/src/styles/footer.less
+++ b/src/styles/footer.less
@@ -38,6 +38,9 @@
       justify-content: space-evenly;
       flex-flow: row;
       width: 100vw;
+      .icon {
+        color: whitesmoke;
+      }
     }
   }
 }
