added navigation to work page, updated links on nav

--- a/src/styles/our-work.less
+++ b/src/styles/our-work.less
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   flex-flow: column wrap;
-
+  padding: 0 1rem;
   .title {
     margin-top: 7rem;
     font-family: Asap, sans-serif;
@@ -13,7 +13,6 @@
     color: black;
     margin-top: 1rem;
     padding-bottom: 1rem;
-
     max-width: 90%;
     blockquote {
       margin: 0;
@@ -39,6 +38,7 @@
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  padding: 0 1rem;
   @media screen and (min-width: 415px) {
     display: flex;
     justify-content: center;
