--- a/src/styles/our-work.css
+++ b/src/styles/our-work.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-flow: column wrap;
+  padding: 0 1rem;
 }
 .work .title {
   margin-top: 7rem;
@@ -34,6 +35,7 @@
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  padding: 0 1rem;
 }
 @media screen and (min-width: 415px) {
   .images {
